app1-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app1-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: app1
  template:
    metadata:
      labels:
        app: app1
    spec:
      containers:
        - name: app1
          image: 896757523510.dkr.ecr.us-east-2.amazonaws.com/sampleapp:app_image
          ports:
            - containerPort: 3000
